--- a/resources/css/base.less
+++ b/resources/css/base.less
@@ -6,7 +6,7 @@
 @small-block-height:75px;   //used for smaller list of buttons (for available apps)
 @availableImageWidth:50px;
 @font-family: Geneva, Arial, Helvetica, sans-serif;
-@font-family-headings: 'Quicksand', sans-serif;
+@font-family-headings: 'QuicksandBook', sans-serif;
 
 
 @darkGreyBase:#3f3f40;//original existdb dark gray
