--- a/templates/page.html
+++ b/templates/page.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <html>
     <head>
         <title class="config:app-title">eXist-db Dashboard</title>
@@ -6,8 +7,8 @@
         <link id="themeStyles" rel="stylesheet" href="../bfResources/scripts/dijit/themes/nihilo/nihilo.css"/>
         <link rel="stylesheet" href="../bfResources/scripts/dojox/grid/resources/nihiloGrid.css"/>
         <link rel="stylesheet" href="../bfResources/scripts/dojox/form/resources/UploaderFileList.css"/>
-        <link href="http://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" type="text/css"/>
         <style type="text/css">
+            @import "resources/css/fonts.css";
             @import "resources/css/global.css";
         </style>
         <script type="text/javascript">
