--- a/templates/page.html
+++ b/templates/page.html
@@ -11,6 +11,9 @@
             @import "resources/css/fonts.css";
             @import "resources/css/global.css";
         </style>
+        <script type="text/javascript" src="_shared/resources/scripts/jquery/jquery-1.7.1.min.js"/>
+        <script type="text/javascript" src="resources/scripts/jquery.ui.widget.js"/>
+        <script type="text/javascript" src="resources/scripts/jquery.fileupload.js"/>
         <script type="text/javascript">
             var dojoConfig = {
                 async: true,
