--- a/plugins/packageManager/packageManager.less
+++ b/plugins/packageManager/packageManager.less
@@ -233,3 +233,16 @@ form.file_upload {
 #uploadDialog {
     width: 460px;
 }
+
+#package-files {
+    width: 100%;
+    margin: 8px 0;
+    td {
+        padding: 4px 6px;
+        text-align: right;
+    }
+    .name {
+        font-weight: bold;
+        text-align: left;
+    }
+}
