--- a/plugins/packageManager/packageManager.less
+++ b/plugins/packageManager/packageManager.less
@@ -7,31 +7,41 @@
         position:relative;
 
         #packageManagerToolbar{
-            height: 30px;
-            background: @lightGreyBase;
-            font-size: 0.7em;
-            color:#efefed;
+            height: 36px;
+        /*
+                    background: @lightGreyBase;
+                    font-size: 0.7em;
+                    color:#efefed;
             text-align: center;
+        */
 
-            div {
-                margin:0 10px 0 0;
+            >* {
+                font-size:0.8em;
+                float:left;
+                height: 30px;
+            }
 
-                #uploadApp {
-                    float: left;
-                    border:none;
-                    background:transparent;
-                    margin: 0;
-                    img {
-                        margin: 0;
-                    }
-                }
-                #details, #detailslabel{
-                    float: right;
+            #uploadApp {
+                border:none;
+                background:transparent;
+                margin: 0;
+                width:8em;
+                float:left;
+                text-align:left;
+
+                img {
+                    margin: 0 0 0 12px;
                 }
             }
 
-            div * {
-                margin: 5px;
+            .centered{
+                width: 40em;
+                text-align: center;
+                padding-top: 9px;
+            }
+            .right{
+                width: 8em;
+                padding-top: 9px;
             }
         }
 
@@ -50,16 +60,16 @@
                 }
             }
             ul li{
-                float: none;
-                margin: 5px 0 5px 5px;
+                float: left;
+                margin: 5px 0 0 5px;
                 position:relative;
                 .border-radius-custom(0px, 20px, 0px, 0px);
+                width:100%;
 
                 .ribbon{
                     position:absolute;
                     right: 0;
                     width: 80px;
-                    opacity: 0.4;
                 }
                 .toolbar {
                     display:none;
@@ -90,13 +100,21 @@
             }*/
             ul li.installed{
                 background-color:@installedColor ;
+
+                .ribbon{
+                    opacity: 1;
+                }
             }
             ul li.notInstalled{
                 background-color: @notInstalledColor;
+
+                .ribbon{
+                    opacity: 0.4;
+                }
             }
             table{
                 background: transparent;
-                padding-left:30px;
+//                padding-left:30px;
 
                 th,td{
                     text-align: left;
@@ -119,28 +137,60 @@
                 float: left;
                 margin: 15px;
                 height:80px;
-                img {
+                position:relative;
+
+                .appIcon {
                     max-width: 128px;
                     height: 100%
                 }
+
+                .appFunctions{
+                    display: none;
+                    position: absolute;
+                    top:-20px;
+                    right: -20px;
+                    z-index: 20;
+
+                    .deleteApp, .installApp{
+                        padding: 0;
+                        margin: 0;
+                        border: none;
+                        background: none;
+
+/*
+                        img{
+                            width: 16px;
+                        }
+*/
+                    }
+                }
+
             }
+            .packageIconArea:hover .appFunctions{
+                display: inline-block;
+            }
+
             .shortTitle {
                 h3 {
                     font-family: @font-family-headings;
                     font-size: 1.5em;
                     font-weight: normal;
+                    margin: 5px 0;
                 }
                 p {
                     font-size: .75em;
                 }
                 p.upgrade {
-                    color: red;
+                    color: darkred;
                     font-weight: bold;
                 }
             }
 
             .shortView{
 
+                li{
+                    height:80px;
+                }
                 table{
                     display:none;
                 }
@@ -152,6 +202,11 @@
                         margin-top: 5px;
                         src: local('Quicksand'), local('Quicksand'), url('sKd0EMYPAh5PYCRKSryvW7O3LdcAZYWl9Si6vvxL-qU.woff') format('truetype');
 
+                    }
+                }
+                .packageIconArea{
+                    .appIcon{
+                        height: 50%;
                     }
                 }
             }
@@ -167,7 +222,7 @@
         }
         #listWrapper > ul > li{
              border:thin solid @lighterGrey2;
-             min-height: 120px;
+//             min-height: 120px;
         }
 
 
