--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -26,6 +26,8 @@ body {
 
   font-size: 100%;
   font-family: Geneva, Arial, Helvetica, sans-serif;
+  /* utils for global usage */
+
 }
 body .dijitDialog,
 body .dijitDialog table {
@@ -41,6 +43,9 @@ body .dojoxGrid {
 body .dijitToolbar {
   height: 30px;
   padding: 5px 0 0 3px;
+}
+body form {
+  padding: 20px;
 }
 body #header {
   width: 100%;
@@ -356,4 +361,10 @@ body #inlineApp .shutdown {
 body #inlineApp .shutdown #shutdown-message {
   color: red;
   font-size: 125%;
+}
+body .message-info {
+  background-color: #D9EDF7;
+  border: #BCE8F1 thin solid;
+  color: #3A87AD;
+  padding: 10px;
 }
