--- a/resources/css/global.less
+++ b/resources/css/global.less
@@ -13,7 +13,8 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#7d7e7d', endColorstr = '#0e0e0e', GradientType = 0); /* IE6-9 */
     font-size: 100%;
     font-family: @font-family;
-    
+
+// some dojo overwrites
     .dijitDialog, .dijitDialog table {
         font-size: 92%;
     }
@@ -28,10 +29,15 @@ body {
         height: 30px;
         padding: 5px 0 0 3px;
     }
+
+    form{
+        padding: 20px;
+    }
+
     #header{
         width:100%;
         height:40px;
-        
+
         .dijitButtonNode {
             background: transparent;
             border: 0;
@@ -47,7 +53,7 @@ body {
             float: left;
         }
     }
-    
+
     .form-control {
         margin: .75em 0;
         label {
@@ -57,7 +63,7 @@ body {
             margin-right: 1em;
         }
     }
-    
+
     .details {
         table {
             font-size: 1em;
@@ -86,7 +92,7 @@ body {
     }
     #content{
         min-height: 600px;
-        /*background: rgb(125, 126, 125); *//* Old browsers */
+    /*background: rgb(125, 126, 125); *//* Old browsers */
         max-width:@block-width * 4 + (@gutter * 8);
         margin-left: auto;
         margin-right: auto;
@@ -109,7 +115,7 @@ body {
         }
 
 
-        // an area to embed inline app screens
+    // an area to embed inline app screens
         #inlineAppArea {
             position: relative;
             overflow: visible;
@@ -123,7 +129,7 @@ body {
             .border-radius-custom(0px, 20px, 0px, 0px);
 
 
-            
+
             #inlineApp {
                 height: @inlineAppHeight;
 
@@ -136,7 +142,7 @@ body {
                     color:@blueBase;
                 }
             }
-            
+
             #inlineClose {
                 position: absolute;
                 top: -16px;
@@ -153,7 +159,7 @@ body {
             }
         }
 
-        //the list of installed (displayed) apps in the dashboard
+    //the list of installed (displayed) apps in the dashboard
         #appList {
             margin: 0;
             padding:0;
@@ -227,19 +233,19 @@ body {
             .appGroup{
                 width: auto;
                 height: auto !important;
-                /*border: thin solid #888888;*/
+            /*border: thin solid #888888;*/
                 margin:0;
 
-                //todo: jt: use same colors for different browsers - use less!
-                /*background: -moz-linear-gradient(top, #CCCCCC 0%,  rgb(238, 238, 238) 100%); *//* FF3.6+ */
-                /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(125, 126, 125, 1)), color-stop(100%, rgba(14, 14, 14, 1))); *//* Chrome,Safari4+ */
-                /*background: -webkit-linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); *//* Chrome10+,Safari5.1+ */
-                /*background: -o-linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); *//* Opera 11.10+ */
-                /*background: -ms-linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); *//* IE10+ */
-                /*background: linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); *//* W3C */
-                /*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#7d7e7d', endColorstr = '#0e0e0e', GradientType = 0); *//* IE6-9 */
+            //todo: jt: use same colors for different browsers - use less!
+            /*background: -moz-linear-gradient(top, #CCCCCC 0%,  rgb(238, 238, 238) 100%); *//* FF3.6+ */
+            /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(125, 126, 125, 1)), color-stop(100%, rgba(14, 14, 14, 1))); *//* Chrome,Safari4+ */
+            /*background: -webkit-linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); *//* Chrome10+,Safari5.1+ */
+            /*background: -o-linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); *//* Opera 11.10+ */
+            /*background: -ms-linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); *//* IE10+ */
+            /*background: linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); *//* W3C */
+            /*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#7d7e7d', endColorstr = '#0e0e0e', GradientType = 0); *//* IE6-9 */
 
-                // a subgroup list
+            // a subgroup list
                 ul{
                     padding: 0;
                 }
@@ -263,11 +269,11 @@ body {
             #existIcon {
                 background-color:#cfcfcf;
                 #logo {
-                        background: url("../images/existdb.png") no-repeat center center;
-                        width: @block-width * 2 + @gutter * 2;
-                        height: @block-height;
-                        opacity: 0.8;
-                        /* background: #cccccc; */
+                    background: url("../images/existdb.png") no-repeat center center;
+                    width: @block-width * 2 + @gutter * 2;
+                    height: @block-height;
+                    opacity: 0.8;
+                /* background: #cccccc; */
 
                 }
 
@@ -294,20 +300,20 @@ body {
 
                     }
                     #addUploadIcons {
-                        /*width: 40px;*/
-                        /*height: 32px;*/
+                    /*width: 40px;*/
+                    /*height: 32px;*/
                         position: absolute;
                         right: 5px;
                         bottom: 8px;
                         display: inline-block;
-                        
+
                         button {
                             cursor: pointer;
                             opacity: 0.5;
                             background:transparent;
                             width: inherit;
                             height: inherit;
-    
+
                             img {
                                 width: 28px;
                                 height: 28px;
@@ -319,10 +325,10 @@ body {
 
             #existIconBack {
                 display: none;
-                
+
                 .configuration {
                     padding: 10px 15px;
-                    
+
                     input {
                         width: 100%;
                     }
@@ -359,5 +365,13 @@ body {
             color: red;
             font-size: 125%;
         }
+    }
+
+/* utils for global usage */
+    .message-info {
+        background-color: #D9EDF7;
+        border: #BCE8F1 thin solid;
+        color: #3A87AD;
+        padding: 10px;
     }
 }
