--- a/plugins/browsing/browsing.css
+++ b/plugins/browsing/browsing.css
@@ -37,3 +37,65 @@
   width: 100%;
   overflow: auto;
 }
+#browsing-upload-dialog {
+  width: 460px;
+}
+#browsing-upload-dialog form.file_upload .file_upload_body {
+  position: relative;
+  overflow: hidden;
+  direction: ltr;
+  cursor: pointer;
+  text-align: center;
+  color: #555;
+  font-weight: bold;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  width: 15em;
+  line-height: 2.5em;
+  background: #E6E6E6;
+  border: 1px solid lightGrey;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+}
+#browsing-upload-dialog form.file_upload .file_upload_body input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  border: 300px solid transparent;
+  opacity: 0;
+  -ms-filter: 'alpha(opacity=0)';
+  -o-transform: translate(-300px, -300px) scale(10);
+  -moz-transform: translate(-800px, 0) scale(10);
+  cursor: pointer;
+  height: 100%;
+}
+#browsing-upload-dialog form.file_upload .file_upload_body button {
+  display: none;
+}
+#browsing-upload-dialog form.file_upload .file_upload_label {
+  display: block;
+}
+#browsing-upload-dialog .progress {
+  border: 1px solid #777;
+  width: 320px;
+  margin: 8px auto;
+}
+#browsing-upload-dialog .progress .bar {
+  height: 18px;
+  background: url(/exist/apps/dashboard/plugins/browsing/images/progressbar.gif);
+}
+#browsing-upload-dialog #files {
+  width: 100%;
+  margin: 8px 0;
+}
+#browsing-upload-dialog #files td {
+  padding: 4px 6px;
+  text-align: right;
+}
+#browsing-upload-dialog #files .name {
+  font-weight: bold;
+  text-align: left;
+}
