--- a/plugins/packageManager/packageManager.less
+++ b/plugins/packageManager/packageManager.less
@@ -229,75 +229,109 @@
     }
 }
 
-form.file_upload {
+#package-upload-dialog {
+    width: 520px;
     
-    .file_upload_body {
+    p {
+        text-align: center;
+        font-size: 85%;
+    }
+    
+    form.file_upload {
+        
+        .file_upload_body {
+            position: relative;
+            overflow: hidden;
+            direction: ltr;
+            cursor: pointer;
+        	text-align: center;
+        	color: #555;
+        	font-weight: bold;
+        	-moz-border-radius: 10px;
+        	-webkit-border-radius: 10px;
+        	border-radius: 10px;
+        	width: 15em;
+        	line-height: 2.5em;
+        	background: #E6E6E6;
+        	border: 1px solid lightGrey;
+        	margin-left: auto;
+        	margin-right: auto;
+            height: auto;
+            
+            input {
+                position: absolute;
+                top: 0;
+            	right: 0;
+            	margin: 0;
+            	border: 300px solid transparent;
+            	opacity: 0;
+            	-ms-filter: 'alpha(opacity=0)';
+            	-o-transform: translate(-300px, -300px) scale(10);
+            	-moz-transform: translate(-800px, 0) scale(10);
+            	cursor: pointer;
+            	height: 100%;
+            }
+            
+            button {
+                display: none;
+            }
+        }
+        
+        .file_upload_label {
+        	display: block;
+        }
+        
+        .file_upload_body:hover {
+            background-color: lawngreen;
+        }
+    }
+    
+    .overall-progress {
         position: relative;
-        overflow: hidden;
-    	direction: ltr;
-    	cursor: pointer;
-    	text-align: center;
-    	color: #555;
-    	font-weight: bold;
-    	-moz-border-radius: 10px;
-    	-webkit-border-radius: 10px;
-    	border-radius: 10px;
-    	width: 15em;
-    	line-height: 2.5em;
-    	background: #E6E6E6;
-    	border: 1px solid lightGrey;
-    	margin-left: auto;
-    	margin-right: auto;
-        height: auto;
-        
-        input {
+        width: 100%;
+        .bar {
+            height: 18px;
+            background: url(images/progressbar.gif);
+        }
+        .progress-label {
             position: absolute;
+            left: 10px;
             top: 0;
-        	right: 0;
-        	margin: 0;
-        	border: 300px solid transparent;
-        	opacity: 0;
-        	-ms-filter: 'alpha(opacity=0)';
-        	-o-transform: translate(-300px, -300px) scale(10);
-        	-moz-transform: translate(-800px, 0) scale(10);
-        	cursor: pointer;
-        	height: 100%;
         }
+    }
+    
+    .queue {
+        display: block;
+        width: 100%;
+        height: 160px;
+        overflow: auto;
+        margin: 8px 0;
+        font-size: 85%;
         
-        button {
-            display: none;
+        .files {
+            width: 100%;
+            margin: 0;
+            tr {
+                td {
+                    padding: 4px 6px;
+                    text-align: right;
+                    border-bottom: 1px solid #E0E0E0;
+                }
+                td.name {
+                    min-width: 120px;
+                    font-weight: bold;
+                    text-align: left;
+                }
+                td.progress {
+                    width: 180px;
+                    margin: 8px auto;
+                    
+                    .bar {
+                        height: 18px;
+                        background: url(images/progressbar.gif);
+                    }
+                }
+            }
         }
-    }
-    
-    .file_upload_label {
-    	display: block;
-    }
-}
-
-.progress {
-    border: 1px solid #777;
-    width: 320px;
-    margin: 8px auto;
-    
-    .bar {
-        height: 18px;
-        background: url(images/progressbar.gif);
-    }
-}
-
-#uploadDialog {
-    width: 460px;
-}
-
-#package-files {
-    width: 100%;
-    margin: 8px 0;
-    td {
-        padding: 4px 6px;
-        text-align: right;
-    }
-    .name {
-        font-weight: bold;
-        text-align: left;
     }
 }
