--- a/plugins/browsing/browsing.css
+++ b/plugins/browsing/browsing.css
@@ -57,8 +57,7 @@
   border-radius: 10px;
   width: 15em;
   line-height: 2.5em;
-  background: #E6E6E6;
-  border: 1px solid lightGrey;
+  border: 3px dashed orange;
   margin-left: auto;
   margin-right: auto;
   height: auto;
@@ -83,7 +82,7 @@
   display: block;
 }
 #browsing-upload-dialog form.file_upload .file_upload_body:hover {
-  background-color: lawngreen;
+  border: 3px dashed lawngreen;
 }
 #browsing-upload-dialog .overall-progress {
   position: relative;
