--- a/plugins/browsing/browsing.less
+++ b/plugins/browsing/browsing.less
@@ -71,8 +71,7 @@
         	border-radius: 10px;
         	width: 15em;
         	line-height: 2.5em;
-        	background: #E6E6E6;
-        	border: 1px solid lightGrey;
+        	border: 3px dashed orange;
         	margin-left: auto;
         	margin-right: auto;
             height: auto;
@@ -101,7 +100,7 @@
         }
         
         .file_upload_body:hover {
-            background-color: lawngreen;
+            border: 3px dashed lawngreen;
         }
     }
     
