--- a/plugins/packageManager/packageManager.css
+++ b/plugins/packageManager/packageManager.css
@@ -210,8 +210,7 @@
   border-radius: 10px;
   width: 15em;
   line-height: 2.5em;
-  background: #E6E6E6;
-  border: 1px solid lightGrey;
+  border: 3px dashed orange;
   margin-left: auto;
   margin-right: auto;
   height: auto;
@@ -236,7 +235,7 @@
   display: block;
 }
 #package-upload-dialog form.file_upload .file_upload_body:hover {
-  background-color: lawngreen;
+  border: 3px dashed lawngreen;
 }
 #package-upload-dialog .overall-progress {
   position: relative;
