--- a/plugins/userManager2/userManager2.css
+++ b/plugins/userManager2/userManager2.css
@@ -4,7 +4,7 @@
   height: 100%;
 }
 
-.userManager2stack {
+#userManager2stack {
   width: 100%;
   height: 100%;
 }
@@ -14,10 +14,31 @@
   height: 100%;
 }
 
-.userGridButtons {
+.actionButtons {
 	float: right;
 }
 
-.groupGridButtons {
-	float: right;
+.availableGroupsContainer {
+    float: left;
+    width: 40%;
+}
+
+#availableGroups {
+    width: 100%;
+}
+
+.groupMembershipActionsContainer {
+    float: left;
+    width: 10%;
+    text-align: center;
+    padding-top: 40pt;
+}
+
+.memberOfGroupsContainer {
+    float: left;
+    width: 40%;
+}
+
+#memberOfGroups {
+    width: 100%;
 }
