--- a/plugins/packageManager/packageManager.less
+++ b/plugins/packageManager/packageManager.less
@@ -184,6 +184,10 @@
                     color: darkred;
                     font-weight: bold;
                 }
+                p.requires {
+                    font-weight: bold;
+                    margin-top: 0;
+                }
             }
 
             .shortView{
