Package manager: display old versions and allow user to install them

--- a/plugins/packageManager/packageManager.less
+++ b/plugins/packageManager/packageManager.less
@@ -116,10 +116,14 @@
                 background: transparent;
 //                padding-left:30px;
 
-                th,td{
+                th,td {
                     text-align: left;
                     font-size:0.7em;
                     vertical-align: top;
+                    
+                    form {
+                        padding: 0;
+                    }
                 }
 
                 ul{
