--- a/plugins/packageManager/packageManager.css
+++ b/plugins/packageManager/packageManager.css
@@ -110,6 +110,10 @@
   font-size: 0.7em;
   vertical-align: top;
 }
+#inlineAppArea .packageManager #listWrapper table th form,
+#inlineAppArea .packageManager #listWrapper table td form {
+  padding: 0;
+}
 #inlineAppArea .packageManager #listWrapper table ul {
   margin: 0;
   padding: 0;
