[bugfix] show collections in same colour as java admin client

--- a/plugins/browsing/browsing.css
+++ b/plugins/browsing/browsing.css
@@ -10,6 +10,11 @@
 .browsing .browsing-container .collection {
   background: #EEE;
 }
+
+.browsing .browsing-container .collectionRow {
+    background: #e1ebe0;
+}
+
 .browsing .browsing-container #breadcrumb {
   height: 20px;
   width: 100%;
