--- a/plugins/userManager/userManager.css
+++ b/plugins/userManager/userManager.css
@@ -1,21 +1,44 @@
 .userManager {
   position: relative;
-}
-.userManager #listWrapper {
-  float: left;
-  overflow: auto;
-  height: 500px;
   width: 100%;
+  height: 100%;
 }
-.userManager .userManager-list #userManager-grid {
-  margin: 0 auto 10px auto;
+
+#userManagerstack {
   width: 100%;
-  height: 400px;
+  height: 100%;
 }
-.userManager #editUserMask {
-  text-align: center;
+
+.userManagertabs {
+  width: 100%;
+  height: 100%;
 }
-.userManager #editUserMask table {
-  margin: auto;
-  padding: 20px 0;
+
+.actionButtons {
+	float: right;
+}
+
+.availableGroupsContainer {
+    float: left;
+    width: 40%;
+}
+
+#availableGroups {
+    width: 100%;
+}
+
+.groupMembershipActionsContainer {
+    float: left;
+    width: 10%;
+    text-align: center;
+    padding-top: 40pt;
+}
+
+.memberOfGroupsContainer {
+    float: left;
+    width: 40%;
+}
+
+#memberOfGroups {
+    width: 100%;
 }
