--- a/plugins/packageManager/packageManager.less
+++ b/plugins/packageManager/packageManager.less
@@ -170,7 +170,7 @@
                 }
 
             }
-            .packageIconArea:hover .appFunctions{
+            .package:hover .appFunctions{
                 display: inline-block;
             }
 
