dashboard CSS fixes: - gradient fixed for webkit, IE ... - fixed ugly gray bar at bottom - removed 'button look' of icon - free-standing icons now

--- a/resources/css/base.less
+++ b/resources/css/base.less
@@ -29,7 +29,9 @@
 .border-radius (@radius: 5px) {
 	-webkit-border-radius: @radius;
 	-moz-border-radius: @radius;
-	border-radius: @radius;
+    -ms-border-radius: @radius;
+    -o-border-radius: @radius;
+    border-radius: @radius;
 }
 .border-radius-custom (@topleft: 5px, @topright: 5px, @bottomleft: 5px, @bottomright: 5px) {
 	-webkit-border-radius: @topleft @topright @bottomright @bottomleft;
