--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -1,24 +1,26 @@
+html {
+  height: 100%;
+  width: 100%;
+  background: #f5f5f5;
+}
 body {
   padding: 0;
   margin: 0;
   width: 100%;
   position: relative;
-  background: -moz-linear-gradient(top, #aaaaaa 0%, #eeeeee 100%);
+  background: -moz-linear-gradient(top, #afafaf 0%, #f5f5f5 100%);
   /* FF3.6+ */
 
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7d7e7d), color-stop(100%, #0e0e0e));
-  /* Chrome,Safari4+ */
-
-  background: -webkit-linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
+  background: -webkit-linear-gradient(top, #afafaf 0%, #f5f5f5 100%);
   /* Chrome10+,Safari5.1+ */
 
-  background: -o-linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
+  background: -o-linear-gradient(top, #afafaf 0%, #f5f5f5 100%);
   /* Opera 11.10+ */
 
-  background: -ms-linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
+  background: -ms-linear-gradient(top, #afafaf 0%, #f5f5f5 100%);
   /* IE10+ */
 
-  background: linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%);
+  background: linear-gradient(top, #afafaf 0%, #f5f5f5 100%);
   /* W3C */
 
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7d7e7d', endColorstr='#0e0e0e', GradientType=0);
@@ -26,8 +28,6 @@ body {
 
   font-size: 100%;
   font-family: Geneva, Arial, Helvetica, sans-serif;
-  /* utils for global usage */
-
 }
 body .dijitDialog,
 body .dijitDialog table {
@@ -43,9 +43,6 @@ body .dojoxGrid {
 body .dijitToolbar {
   height: 30px;
   padding: 5px 0 0 3px;
-}
-body form {
-  padding: 20px;
 }
 body #header {
   width: 100%;
@@ -164,14 +161,11 @@ body #content #inlineAppArea #inlineAppTitle {
   text-align: center;
 }
 body #content #appList {
-  margin: 0;
+  margin: 0 0 100px 0;
   padding: 0;
   display: inline-block;
 }
 body #content #appList li {
-  background-color: #fff;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25), 0 0 50px rgba(0, 0, 0, 0.1) inset;
-  border-radius: 1% 1% 1% 1% 1% 1% 1%;
   list-style-type: none;
   float: left;
   position: relative;
@@ -189,6 +183,7 @@ body #content #appList li button {
   border: none;
   width: 150px;
   height: 150px;
+  background: transparent;
 }
 body #content #appList li > button:focus {
   border: solid 3px #4682b4;
@@ -213,11 +208,14 @@ body #content #appList li a {
 }
 body #content #appList li h3 {
   width: 100%;
-  font-size: 1em;
+  font-size: 1.1em;
   font-weight: normal;
-  color: #444444;
+  color: #777777;
   display: block;
   margin-top: 6px;
+}
+body #content #appList li button:hover h3 {
+  color: black;
 }
 body #content #appList li button img {
   margin: auto 0 auto 0;
@@ -284,6 +282,7 @@ body #content #appList #existIcon #logo {
   width: 330px;
   height: 150px;
   opacity: 0.8;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25), 0 0 50px rgba(0, 0, 0, 0.1) inset;
   /* background: #cccccc; */
 
 }
@@ -361,10 +360,4 @@ body #inlineApp .shutdown {
 body #inlineApp .shutdown #shutdown-message {
   color: red;
   font-size: 125%;
-}
-body .message-info {
-  background-color: #D9EDF7;
-  border: #BCE8F1 thin solid;
-  color: #3A87AD;
-  padding: 10px;
 }
