--- a/resources/css/global.less
+++ b/resources/css/global.less
@@ -1,20 +1,26 @@
 @import url("base.less");
+@gradientStart:rgba(175, 175, 175, 1);
+@gradientEnd:rgb(245, 245, 245,1);
+html{
+    height:100%;
+    width:100%;
+    background:whitesmoke
+}
 body {
     padding: 0;
     margin: 0;
     width: 100%;
     position: relative;
-    background: -moz-linear-gradient(top, rgba(170, 170, 170, 1) 0%,  rgb(238, 238, 238) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(125, 126, 125, 1)), color-stop(100%, rgba(14, 14, 14, 1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); /* IE10+ */
-    background: linear-gradient(top, rgba(125, 126, 125, 1) 0%, rgba(14, 14, 14, 1) 100%); /* W3C */
+    background: -moz-linear-gradient(top, @gradientStart 0%,  @gradientEnd 100%); /* FF3.6+ */
+//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(125, 126, 125, 1)), color-stop(100%, rgba(14, 14, 14, 1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, @gradientStart 0%, @gradientEnd 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, @gradientStart 0%, @gradientEnd 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, @gradientStart 0%, @gradientEnd 100%); /* IE10+ */
+    background: linear-gradient(top, @gradientStart 0%, @gradientEnd 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#7d7e7d', endColorstr = '#0e0e0e', GradientType = 0); /* IE6-9 */
     font-size: 100%;
     font-family: @font-family;
 
-// some dojo overwrites
     .dijitDialog, .dijitDialog table {
         font-size: 92%;
     }
@@ -29,11 +35,6 @@ body {
         height: 30px;
         padding: 5px 0 0 3px;
     }
-
-    form{
-        padding: 20px;
-    }
-
     #header{
         width:100%;
         height:40px;
@@ -161,14 +162,11 @@ body {
 
     //the list of installed (displayed) apps in the dashboard
         #appList {
-            margin: 0;
+            margin: 0 0 100px 0;
             padding:0;
             display:inline-block;
 
             li {
-                background-color: #fff;
-                box-shadow: 0 1px 5px rgba(0,0,0,0.25), 0 0 50px rgba(0,0,0,0.1) inset;
-                border-radius: 1%     1%     1%     1% /     1%     1%     1%     1%;
                 list-style-type: none;
                 float: left;
                 position: relative;
@@ -186,6 +184,7 @@ body {
                     border:none;
                     width: @block-width;
                     height:@block-height;
+                    background:transparent;
                 }
                 > button:focus{
                     border:solid 3px #4682b4;
@@ -210,11 +209,14 @@ body {
                 }
                 h3 {
                     width: 100%;
-                    font-size: 1em;
+                    font-size: 1.1em;
                     font-weight: normal;
-                    color:#444444;
+                    color:#777777;
                     display: block;
                     margin-top: 6px;
+                }
+                button:hover h3{
+                    color:black;
                 }
                 button img {
                     margin: auto 0 auto 0;
@@ -273,6 +275,9 @@ body {
                     width: @block-width * 2 + @gutter * 2;
                     height: @block-height;
                     opacity: 0.8;
+                    box-shadow: 0 1px 5px rgba(0,0,0,0.25), 0 0 50px rgba(0,0,0,0.1) inset;
+
+
                 /* background: #cccccc; */
 
                 }
@@ -365,13 +370,5 @@ body {
             color: red;
             font-size: 125%;
         }
-    }
-
-/* utils for global usage */
-    .message-info {
-        background-color: #D9EDF7;
-        border: #BCE8F1 thin solid;
-        color: #3A87AD;
-        padding: 10px;
     }
 }
