Improvements to the backup plugin

--- a/plugins/backup/backup.less
+++ b/plugins/backup/backup.less
@@ -1,6 +1,7 @@
 @lightGreyBase: #6d6e70;//original existdb lighter gray
 
 .backup {
+    
     .backup-list {
         #backup-grid {
             margin: 0 auto 10px auto;
@@ -8,6 +9,21 @@
         }
         .toolbar img {
             height: 24px;
+        }
+    }
+    
+    #backup-form {
+        margin: 0 10px;
+        
+        ul {
+            list-style: none;
+            margin: 18px 0;
+            padding: 0;
+            
+            li {
+                margin: 8px 0 0 0;
+                padding: 0;
+            }
         }
     }
 }
