--- a/plugins/backup/backup.css
+++ b/plugins/backup/backup.css
@@ -5,3 +5,15 @@
 .backup .backup-list .toolbar img {
   height: 24px;
 }
+.backup #backup-form {
+  margin: 0 10px;
+}
+.backup #backup-form ul {
+  list-style: none;
+  margin: 18px 0;
+  padding: 0;
+}
+.backup #backup-form ul li {
+  margin: 8px 0 0 0;
+  padding: 0;
+}
