--- a/plugins/packageManager/packageManager.css
+++ b/plugins/packageManager/packageManager.css
@@ -184,7 +184,7 @@
   font-size: 1.2em;
   display: block;
   margin-top: 5px;
-  src: local('Quicksand'), local('Quicksand'), url('sKd0EMYPAh5PYCRKSryvW7O3LdcAZYWl9Si6vvxL-qU.woff') format('truetype');
+  src: local('Quicksand'), local('Quicksand'), url('/exist/apps/dashboard/plugins/packageManager/sKd0EMYPAh5PYCRKSryvW7O3LdcAZYWl9Si6vvxL-qU.woff') format('truetype');
 }
 #inlineAppArea .packageManager #listWrapper .shortView .packageIconArea .appIcon {
   height: 50%;
@@ -248,10 +248,11 @@
 #package-upload-dialog .overall-progress {
   position: relative;
   width: 100%;
+  margin-top: 20px;
 }
 #package-upload-dialog .overall-progress .bar {
   height: 18px;
-  background: url(images/progressbar.gif);
+  background: url(/exist/apps/dashboard/plugins/packageManager/images/progressbar.gif);
 }
 #package-upload-dialog .overall-progress .progress-label {
   position: absolute;
@@ -286,5 +287,5 @@
 }
 #package-upload-dialog .queue .files tr td.progress .bar {
   height: 18px;
-  background: url(images/progressbar.gif);
+  background: url(/exist/apps/dashboard/plugins/packageManager/images/progressbar.gif);
 }
