--- a/plugins/packageManager/packageManager.less
+++ b/plugins/packageManager/packageManager.less
@@ -296,6 +296,7 @@
     .overall-progress {
         position: relative;
         width: 100%;
+        margin-top: 20px;
         .bar {
             height: 18px;
             background: url(images/progressbar.gif);
