--- a/resources/css/global.less
+++ b/resources/css/global.less
@@ -17,7 +17,7 @@ body {
     background: -o-linear-gradient(top, @gradientStart 0%, @gradientEnd 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(top, @gradientStart 0%, @gradientEnd 100%); /* IE10+ */
     background: linear-gradient(top, @gradientStart 0%, @gradientEnd 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#7d7e7d', endColorstr = '#0e0e0e', GradientType = 0); /* IE6-9 */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#aeaeae', endColorstr = '#f5f5f5', GradientType = 0); /* IE6-9 */
     font-size: 100%;
     font-family: @font-family;
 
