--- a/plugins/userManager/userManager.css
+++ b/plugins/userManager/userManager.css
@@ -1,3 +1,44 @@
 .userManager {
   position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+#userManagerstack {
+  width: 100%;
+  height: 100%;
+}
+
+.userManagertabs {
+  width: 100%;
+  height: 100%;
+}
+
+.actionButtons {
+	float: right;
+}
+
+.availableGroupsContainer {
+    float: left;
+    width: 40%;
+}
+
+#availableGroups {
+    width: 100%;
+}
+
+.groupMembershipActionsContainer {
+    float: left;
+    width: 10%;
+    text-align: center;
+    padding-top: 40pt;
+}
+
+.memberOfGroupsContainer {
+    float: left;
+    width: 40%;
+}
+
+#memberOfGroups {
+    width: 100%;
 }
