--- a/expath-pkg.xml.tmpl
+++ b/expath-pkg.xml.tmpl
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package xmlns="http://expath.org/ns/pkg" name="http://exist-db.org/apps/dashboard" abbrev="dashboard" version="@project.version@" spec="1.0">
     <title>Dashboard</title>
-    <dependency package="http://exist-db.org/apps/shared" semver="@dependency.shared.version@"/>
+    <dependency package="http://exist-db.org/apps/shared" semver-min="@dependency.shared.version@"/>
 </package>
