Add kill and refresh button to running XQuery view in scheduler plugin.

--- a/plugins/scheduler/scheduler.css
+++ b/plugins/scheduler/scheduler.css
@@ -125,3 +125,8 @@
   height: 18px;
   background: url(/exist/apps/dashboard/plugins/scheduler/images/progressbar.gif);
 }
+.iconRefresh {
+    width: 16px;
+    height: 16px;
+    background: url(/exist/apps/dashboard/plugins/browsing/images/arrow_refresh.png);
+}
