--- a/plugins/userManager/userManager.css
+++ b/plugins/userManager/userManager.css
@@ -1,44 +1,8 @@
 .userManager {
   position: relative;
-  width: 100%;
-  height: 100%;
 }
-
-#userManagerstack {
-  width: 100%;
-  height: 100%;
-}
-
-.userManagertabs {
-  width: 100%;
-  height: 100%;
-}
-
-.actionButtons {
-	float: right;
-}
-
-.availableGroupsContainer {
-    float: left;
-    width: 40%;
-}
-
-#availableGroups {
-    width: 100%;
-}
-
-.groupMembershipActionsContainer {
-    float: left;
-    width: 10%;
-    text-align: center;
-    padding-top: 40pt;
-}
-
-.memberOfGroupsContainer {
-    float: left;
-    width: 40%;
-}
-
-#memberOfGroups {
-    width: 100%;
+.hint {
+  float: right;
+  margin: 4px 0 0 20px;
+  font-size: 85%;
 }
