--- a/plugins/packageManager/packageManager.css
+++ b/plugins/packageManager/packageManager.css
@@ -4,11 +4,11 @@
 #inlineAppArea .packageManager #packageManagerToolbar {
   height: 36px;
   /*
-                    background: @lightGreyBase;
-                    font-size: 0.7em;
-                    color:#efefed;
-            text-align: center;
-        */
+                  background: @lightGreyBase;
+                  font-size: 0.7em;
+                  color:#efefed;
+          text-align: center;
+      */
 
 }
 #inlineAppArea .packageManager #packageManagerToolbar > * {
@@ -42,18 +42,18 @@
   height: 500px;
   width: 100%;
   /*ul li:focus{
-                .toolbar{
-                    display:inline-block;
-                    text-align:center;
-                    width:100%;
+          .toolbar{
+              display:inline-block;
+              text-align:center;
+              width:100%;
 
-                    .toobarBtn{
-                        img {
-                            width: 32px;
-                        }
-                    }
-                }
-            }*/
+              .toobarBtn{
+                  img {
+                      width: 32px;
+                  }
+              }
+          }
+      }*/
 
 }
 #inlineAppArea .packageManager #listWrapper ul {
@@ -103,6 +103,9 @@
 }
 #inlineAppArea .packageManager #listWrapper table {
   background: transparent;
+  margin-left: 178px;
+  margin-bottom: 10px;
+  width: 500px;
 }
 #inlineAppArea .packageManager #listWrapper table th,
 #inlineAppArea .packageManager #listWrapper table td {
@@ -125,7 +128,7 @@
 #inlineAppArea .packageManager #listWrapper .packageIconArea {
   width: 150px;
   float: left;
-  margin: 15px;
+  margin: 15px 15px 0 15px;
   height: 80px;
   position: relative;
 }
@@ -147,10 +150,10 @@
   border: none;
   background: none;
   /*
-                        img{
-                            width: 16px;
-                        }
-*/
+                                    img{
+                                        width: 16px;
+                                    }
+            */
 
 }
 #inlineAppArea .packageManager #listWrapper .package:hover .appFunctions {
@@ -164,6 +167,7 @@
 }
 #inlineAppArea .packageManager #listWrapper .shortTitle p {
   font-size: .75em;
+  margin: 0;
 }
 #inlineAppArea .packageManager #listWrapper .shortTitle p.upgrade {
   color: darkred;
@@ -173,8 +177,12 @@
   font-weight: bold;
   margin-top: 0;
 }
+#inlineAppArea .packageManager #listWrapper h3 {
+  margin-right: 78px !important;
+}
 #inlineAppArea .packageManager #listWrapper .shortView li {
   height: 80px;
+  padding-bottom: 10px;
 }
 #inlineAppArea .packageManager #listWrapper .shortView table {
   display: none;
@@ -184,7 +192,7 @@
   font-size: 1.2em;
   display: block;
   margin-top: 5px;
-  src: local('Quicksand'), local('Quicksand'), url('/exist/apps/dashboard/plugins/packageManager/sKd0EMYPAh5PYCRKSryvW7O3LdcAZYWl9Si6vvxL-qU.woff') format('truetype');
+  src: local('Quicksand'), local('Quicksand'), url('sKd0EMYPAh5PYCRKSryvW7O3LdcAZYWl9Si6vvxL-qU.woff') format('truetype');
 }
 #inlineAppArea .packageManager #listWrapper .shortView .packageIconArea .appIcon {
   height: 50%;
@@ -252,7 +260,7 @@
 }
 #package-upload-dialog .overall-progress .bar {
   height: 18px;
-  background: url(/exist/apps/dashboard/plugins/packageManager/images/progressbar.gif);
+  background: url(images/progressbar.gif);
 }
 #package-upload-dialog .overall-progress .progress-label {
   position: absolute;
@@ -287,5 +295,5 @@
 }
 #package-upload-dialog .queue .files tr td.progress .bar {
   height: 18px;
-  background: url(/exist/apps/dashboard/plugins/packageManager/images/progressbar.gif);
+  background: url(images/progressbar.gif);
 }
