--- a/plugins/userManager/userManager.css
+++ b/plugins/userManager/userManager.css
@@ -1,60 +1,63 @@
 .userManager {
-  position: relative;
+    position: relative;
 }
 .userManager label {
-  display: block;
-  float: left;
-  margin-right: 15px;
-  text-align: right;
-  width: 276px !important;
+    display: block;
+    float: left;
+    margin-right: 15px;
+    text-align: right;
+    width: 276px !important;
 }
 .userManager fieldset {
-  border: thin solid #cdcdcd;
-  margin: 3px;
-  border-right: none;
-  border-left: none;
-  background: #e3e3e3;
+    border: thin solid #cdcdcd;
+    margin: 3px;
+    border-right: none;
+    border-left: none;
+    background: #e3e3e3;
+}
+.userManager .actionButtons .dijitButton {
+    float: left;
 }
 .hint {
-  color: steelblue;
-  margin: 0 auto;
-  width: 100%;
-  float: left;
-  text-align: center;
+    color: steelblue;
+    margin: 0 auto;
+    width: 100%;
+    float: left;
+    text-align: center;
 }
 #groupContainer {
-  float: left;
-  width: 100%;
-  margin-top: 10px;
+    float: left;
+    width: 100%;
+    margin-top: 10px;
 }
 #groupContainer > div {
-  float: left;
+    float: left;
 }
 #groupContainer label {
-  text-align: left;
+    text-align: left;
 }
 #groupContainer select {
-  width: 200px;
+    width: 200px;
 }
 #groupContainer .availableGroupsContainer,
 #groupContainer .memberOfGroupsContainer {
-  width: 40%;
+    width: 40%;
 }
 #groupContainer .availableGroupsContainer label {
-  text-align: right;
+    text-align: right;
 }
 #groupContainer .availableGroupsContainer .controldiv {
-  text-align: right;
+    text-align: right;
 }
 #groupContainer .availableGroupsContainer select {
-  text-align: right;
+    text-align: right;
 }
 #groupContainer .memberOfGroupsContainer label {
-  text-align: left;
+    text-align: left;
 }
 #groupContainer .memberOfGroupsContainer .controldiv {
-  text-align: left;
+    text-align: left;
 }
 #groupContainer .groupMembershipActionsContainer {
-  margin-top: 70px;
+    margin-top: 70px;
 }
