Use dojo from CDN
In case Betterform is disabled...

--- a/templates/page.html
+++ b/templates/page.html
@@ -4,9 +4,9 @@
         <title class="config:app-title">eXist-db Dashboard</title>
         <meta class="config:app-meta"/>
         <link rel="shortcut icon" href="resources/images/favicon.ico"/>
-        <link id="themeStyles" rel="stylesheet" href="../bfResources/scripts/dijit/themes/nihilo/nihilo.css"/>
-        <link rel="stylesheet" href="../bfResources/scripts/dojox/grid/resources/nihiloGrid.css"/>
-        <link rel="stylesheet" href="../bfResources/scripts/dojox/form/resources/UploaderFileList.css"/>
+        <link id="themeStyles" rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.7.2/dijit/themes/nihilo/nihilo.css"/>
+        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.7.2/dojox/grid/resources/nihiloGrid.css"/>
+        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.7.2/dojox/form/resources/UploaderFileList.css"/>
         <style type="text/css">
             @import "resources/css/fonts.css";
             @import "resources/css/global.css";
@@ -24,7 +24,7 @@
                 ]
             };
         </script>
-        <script type="text/javascript" src="../bfResources/scripts/dojo/dojo.js"/>
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/dojo/1.7.2/dojo/dojo.js"/>
         <script type="text/javascript" src="resources/scripts/dashboard-1.7.js"/>
     </head>
     <body class="nihilo">
