Correct semver-min

--- a/expath-pkg.xml.tmpl
+++ b/expath-pkg.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package xmlns="http://expath.org/ns/pkg" name="http://exist-db.org/apps/dashboard" abbrev="dashboard" version="@project.version@" spec="1.0">
     <title>Dashboard</title>
-    <dependency processor="http://exist-db.org" semver-min="4.0.0"/>
+    <dependency processor="http://exist-db.org" semver-min="3.7.0-SNAPSHOT"/>
     <dependency package="http://exist-db.org/apps/shared" semver-min="@dependency.shared.version@"/>
 </package>
